# simplePlayer

./: Cargo.toml  README.md
src/: cpal_stream.rs  main.rs  player.rs
