[package]
name = "simplePlayer"
version = "0.1.0"
authors = ["sonata-chen <sonatachen39@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
jack = "0.6"
# tuix = { git = "https://github.com/geom3trik/tuix", branch = "main" }
# ffmpeg-sys = { version = "4" }
ffmpeg = { git = "https://github.com/sonata-chen/rust-ffmpeg", branch = "player"}
crossbeam = "0.8.0"
