[package]
name = "ffmpeg"
version = "0.1.0"
authors = ["sonata-chen <sonatachen39@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsmpeg = "0.6.0"
cstr = "0.2.8"
anyhow = "1.0"
cpal = "0.13.3"
ringbuf = "0.2.5"
